# waykit

./: .gitignore  LICENSE.md  README.md  justfile  pyproject.toml
notebooks/: grid_visualization.ipynb
notebooks/.ipynb_checkpoints/: grid_visualization-checkpoint.ipynb
src/waykit/: __init__.py  cached_provider.py  geo.py  grid_index.py  models.py  openstreetmap_provider.py
src/waykit/data/: alps-huts.jsonl
testdata/: 2025-07-31-domhutte_run.gpx  2025-08-01-dom_4545m_run.gpx  2025-08-02-randa_run.gpx
tests/: conftest.py  test_cached_provider.py  test_grid_index.py  test_models.py  test_openstreetmap_provide.py
